Fixed: The URL input is now center aligned

--- a/src/components/url-input-control/editor.scss
+++ b/src/components/url-input-control/editor.scss
@@ -5,6 +5,8 @@
 	background: #fff;
 	width: 100%;
 	max-width: 400px;
+	margin-left: auto;
+	margin-right: auto;
 }
 .ugb-url-input-control__wrapper {
 	display: flex;
